--- a/indexestilos.css
+++ b/indexestilos.css
@@ -60,6 +60,7 @@ h2{
     text-transform: uppercase;
     text-align: center;
     text-shadow: 2px 2px 2px #9d7a35;
+    font-size: 30px;
 }
 
 section p{
