--- a/indexestilos.css
+++ b/indexestilos.css
@@ -21,16 +21,6 @@ section{
     width: 100%;
 }
 
-div{
-    background-color: #fec553;
-    border: solid;
-    border-color: #fec553;
-    border-radius: 10px;
-    margin: 150px 10px 10px 70px;
-    padding: 10px;
-    width: 50%;
-}
-
 .bloque{
     background-color: #fec553;
     border: solid;
@@ -92,3 +82,34 @@ div img.imagen2{
     font-family: Arial, sans-serif;
     font-size: 30px;
 }
+
+.info{
+	width: 1350px;
+	height: 700px;
+	border-radius: 12px;
+	border: solid;
+	border-color: #ac93bc;
+}
+
+.slides {
+    width: 90%;
+	display: flex;	
+	overflow-x: auto;
+	scroll-snap-type: x mandatory;
+    margin-left: 6%;
+    margin-top: 14%;
+}
+		
+.slides > div {	
+	display: flex;
+	flex-shrink: 0;
+	width: 95%;
+	height: 90%;
+	scroll-snap-align: start;
+	scroll-behavior: smooth;
+	background: #74ABE2;
+	justify-content: center;
+	align-items: center;
+	font-size: 100px;
+}
+
